fix spacing mobile

--- a/styles.css
+++ b/styles.css
@@ -149,11 +149,11 @@ main {
 }
 
 .projectHeader h2 {
-    margin: 20px 0px 24px 0px;
+    margin: 20px 0px 16px 0px;
 }
 
 .projectDetails {
-    margin: 8px 0px 9px 0px;
+    margin: 0px 0px 9px 0px;
     overflow-y: scroll;
     padding: 0px 24px 0px 0px;
 }
